@@ -1,3 +1,8 @@
+2014-01-17  Jeff Law  <law@redhat.com>
+
+	* ree.c (combine_set_extension): Temporarily disable test for
+	changing number of hard registers.
+
 2014-01-17  Jan Hubicka  <jh@suse.cz>
 
 	PR middle-end/58125
